tests/typec-test/test_out/spec-call.txt
error: not all parameter specs are satisfied
  --> spec-call/root.ctl:15:31
   |
15 | fn other_main() -> u32 => pass(0)
   |                               ^^^ here
   |
   = info: missing implementations:
            u32: Clay

